challenge-2/prod-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: prod-netpol
spec:
  podSelector:
    matchLabels:
  ingress:
    - from:
        - podSelector: {}
